--- a/404-ar.html
+++ b/404-ar.html
@@ -195,7 +195,7 @@
                     <span class="icon-telephone-call"></span>
                   </div>
                   <div class="main-menu-two__call-content">
-                    <p class="main-menu-two__call-sub-title">Call Now</p>
+                    <p class="main-menu-two__call-sub-title">اتصل الآن</p>
                     <h5 class="main-menu-two__call-number">
                       <a href="tel:+201013714343">+20 101 3714 343</a>
                     </h5>
