--- a/404-ar.html
+++ b/404-ar.html
@@ -177,9 +177,7 @@
                     </li>
                   </ul>
                   <div class="main-menu-two__btn-box d-md-none d-sm-block">
-                    <a href="404.html" class="main-menu-two__btn thm-btn"
-                      >En</a
-                    >
+                    <a href="404.html" class="main-menu-two__btn thm-btn">En</a>
                   </div>
                 </div>
               </div>
@@ -260,7 +258,9 @@
                     <button type="submit"><i class="icon-search-1"></i></button>
                   </div>
                 </form> -->
-                <a href="index-ar.html" class="thm-btn error-page__btn m-auto mt-5"
+                <a
+                  href="index-ar.html"
+                  class="thm-btn error-page__btn m-auto mt-5"
                   >العودة الي الرئيسية</a
                 >
               </div>
@@ -296,9 +296,9 @@
                       /></a>
                     </div>
                     <p class="footer-widget__about-text">
-                      Neque porttitor fermentum congue duis<br />
-                      natoque had amcorp torquent vulputate<br />
-                      donec tren conubian
+                      Index Consultation: شركة استشارية ديناميكية في القاهرة<br />
+                      تحوّل الاستراتيجيات الجريئة وتجارب العملاء التي لا تُنسى<br />
+                      إلى نمو يمكن قياسه.
                     </p>
                     <div class="footer-widget__emergency-call">
                       <p>اتصل الآن</p>
