--- a/404.html
+++ b/404.html
@@ -295,9 +295,9 @@
                       /></a>
                     </div>
                     <p class="footer-widget__about-text">
-                      Neque porttitor fermentum congue duis<br />
-                      natoque had amcorp torquent vulputate<br />
-                      donec tren conubian
+                      Index Consultation: Cairo’s dynamic consultancy<br />
+                      turning bold strategy and unforgettable customer<br />
+                      experiences into measurable growth.
                     </p>
                     <div class="footer-widget__emergency-call">
                       <p>Emergency</p>
