--- a/about-ar.html
+++ b/about-ar.html
@@ -398,8 +398,8 @@
               <p class="section-title-two__tagline">ميزات الشركة</p>
             </div>
             <h2 class="section-title-two__title">
-              Developing leaders and high <br />
-              performance teams
+              شريكك الاستراتيجي لإدارة الموارد البشرية<br />وحلول استشارية
+              متكاملة
             </h2>
           </div>
           <div class="row">
@@ -413,10 +413,9 @@
                   <a href="services-details.html">من نحن</a>
                 </h3>
                 <p class="services-three__text">
-                  Massa augue angry inceptos ridiculus poten dictumst amet
-                  dignissim curabitur ultrices egestas augue auctor volutpat
-                  vitae conubia bibendum ligula ligula educate dictum autonum
-                  necute rutrum real integrity buying cool read engineer
+                  نحن شركة متخصصة في تقديم استشارات الموارد البشرية وحلول
+                  الأعمال. نعمل على تحسين أداء المؤسسات من خلال تقديم استشارات
+                  متكاملة وخدمات مخصصة تلبي احتياجات عملائنا.
                 </p>
               </div>
             </div>
@@ -431,10 +430,9 @@
                   <a href="services-details.html">رؤية الشركة</a>
                 </h3>
                 <p class="services-three__text">
-                  Massa augue angry inceptos ridiculus poten dictumst amet
-                  dignissim curabitur ultrices egestas augue auctor volutpat
-                  vitae conubia bibendum ligula ligula educate dictum autonum
-                  necute rutrum real integrity buying cool read engineer
+                  أن نكون الشريك الاستراتيجي الرائد في مجال استشارات الموارد
+                  البشرية وحلول الأعمال، من خلال تقديم خدمات مبتكرة وفعالة تساهم
+                  في تحقيق نجاح عملائنا وتعزيز مكانتهم في السوق.
                 </p>
               </div>
             </div>
@@ -449,10 +447,10 @@
                   <a href="services-details.html">لماذا تختارنا</a>
                 </h3>
                 <p class="services-three__text">
-                  Massa augue angry inceptos ridiculus poten dictumst amet
-                  dignissim curabitur ultrices egestas augue auctor volutpat
-                  vitae conubia bibendum ligula ligula educate dictum autonum
-                  necute rutrum real integrity buying cool read engineer
+                  نحن نتميز بفريق عمل ذو خبرة واسعة في مجال استشارات الموارد
+                  البشرية وحلول الأعمال، مما يمكننا من تقديم خدمات مخصصة تلبي
+                  احتياجات عملائنا بشكل فعال. نحن نلتزم بالجودة والابتكار في كل
+                  ما نقوم به.
                 </p>
               </div>
             </div>
@@ -531,14 +529,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      هذه الخدمة كانت رائعة حقًا. لقد ساعدتنا في تحسين عملياتنا
+                      وزيادة كفاءتنا بشكل كبير. فريق العمل كان محترفًا ومتعاونًا
+                      طوال الوقت.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Jennifer R. Sullivan</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -574,14 +571,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      هذه الخدمة كانت رائعة حقًا. لقد ساعدتنا في تحسين عملياتنا
+                      وزيادة كفاءتنا بشكل كبير. فريق العمل كان محترفًا ومتعاونًا
+                      طوال الوقت.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Asle Brown</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -617,14 +613,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      هذه الخدمة كانت رائعة حقًا. لقد ساعدتنا في تحسين عملياتنا
+                      وزيادة كفاءتنا بشكل كبير. فريق العمل كان محترفًا ومتعاونًا
+                      طوال الوقت.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Jimy Anderson</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -660,14 +655,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      هذه الخدمة كانت رائعة حقًا. لقد ساعدتنا في تحسين عملياتنا
+                      وزيادة كفاءتنا بشكل كبير. فريق العمل كان محترفًا ومتعاونًا
+                      طوال الوقت.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Jennifer R. Sullivan</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -703,14 +697,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      هذه الخدمة كانت رائعة حقًا. لقد ساعدتنا في تحسين عملياتنا
+                      وزيادة كفاءتنا بشكل كبير. فريق العمل كان محترفًا ومتعاونًا
+                      طوال الوقت.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Asle Brown</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -746,14 +739,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      هذه الخدمة كانت رائعة حقًا. لقد ساعدتنا في تحسين عملياتنا
+                      وزيادة كفاءتنا بشكل كبير. فريق العمل كان محترفًا ومتعاونًا
+                      طوال الوقت.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Jimy Anderson</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -789,14 +781,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      هذه الخدمة كانت رائعة حقًا. لقد ساعدتنا في تحسين عملياتنا
+                      وزيادة كفاءتنا بشكل كبير. فريق العمل كان محترفًا ومتعاونًا
+                      طوال الوقت.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Jennifer R. Sullivan</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -832,14 +823,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      هذه الخدمة كانت رائعة حقًا. لقد ساعدتنا في تحسين عملياتنا
+                      وزيادة كفاءتنا بشكل كبير. فريق العمل كان محترفًا ومتعاونًا
+                      طوال الوقت.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Asle Brown</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -875,14 +865,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      هذه الخدمة كانت رائعة حقًا. لقد ساعدتنا في تحسين عملياتنا
+                      وزيادة كفاءتنا بشكل كبير. فريق العمل كان محترفًا ومتعاونًا
+                      طوال الوقت.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Jimy Anderson</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -914,23 +903,22 @@
               <div class="progress-two__right">
                 <div class="section-title text-left">
                   <div class="section-title__tagline-box">
-                    <p class="section-title__tagline">Focus Quality</p>
+                    <p class="section-title__tagline">التركيز علي الجودة</p>
                   </div>
                   <h2 class="section-title__title">
-                    concept Design delivery <br />
-                    exceptional execution
+                    تصميم مبتكر<br />تنفيذ استثنائي
                   </h2>
                 </div>
                 <p class="progress-two__text">
-                  Erose luctus tellus velitens normal dapibus praesent tempor
-                  feugiat eleifend purus diam erat malesuada class duis orci
-                  class vulputate ultricies aliquet congue inceptos.
+                  نحن ملتزمون بتقديم أعلى مستويات الجودة في جميع خدماتنا. من
+                  خلال فريق عمل متخصص وخبرة واسعة، نضمن تحقيق نتائج استثنائية
+                  تلبي توقعات عملائنا وتفوقها.
                 </p>
                 <ul class="progress-two__progress-list list-unstyled">
                   <li>
                     <div class="progress-two__single">
                       <h4 class="progress-two__progress-title">
-                        Consulting (60%)
+                        استشارات (60%)
                       </h4>
                       <div class="bar">
                         <div
@@ -943,7 +931,7 @@
                   <li>
                     <div class="progress-two__single">
                       <h4 class="progress-two__progress-title">
-                        Finance (80%)
+                        المالية (80%)
                       </h4>
                       <div class="bar">
                         <div
@@ -956,7 +944,7 @@
                   <li>
                     <div class="progress-two__single">
                       <h4 class="progress-two__progress-title">
-                        Startup (65%)
+                        الشركات الناشئة (65%)
                       </h4>
                       <div class="bar">
                         <div
@@ -978,10 +966,10 @@
       <section class="brand-one brand-two">
         <div class="container">
           <div class="section-title-two text-center">
-              <div class="section-title-two__tagline-box">
-                  <p class="section-title-two__tagline">شركتنا الراضية</p>
-              </div>
-              <h2 class="section-title-two__title">بعض عملائنا</h2>
+            <div class="section-title-two__tagline-box">
+              <p class="section-title-two__tagline">شركتنا الراضية</p>
+            </div>
+            <h2 class="section-title-two__title">بعض عملائنا</h2>
           </div>
           <div class="brand-one__inner">
             <div
@@ -1091,9 +1079,9 @@
                       /></a>
                     </div>
                     <p class="footer-widget__about-text">
-                      Neque porttitor fermentum congue duis<br />
-                      natoque had amcorp torquent vulputate<br />
-                      donec tren conubian
+                      Index Consultation: شركة استشارية ديناميكية في القاهرة<br />
+                      تحوّل الاستراتيجيات الجريئة وتجارب العملاء التي لا تُنسى<br />
+                      إلى نمو يمكن قياسه.
                     </p>
                     <div class="footer-widget__emergency-call">
                       <p>اتصل الآن</p>
