--- a/about.html
+++ b/about.html
@@ -401,8 +401,8 @@
               <p class="section-title-two__tagline">company feature</p>
             </div>
             <h2 class="section-title-two__title">
-              Developing leaders and high <br />
-              performance teams
+              Your strategic partner in human resources management<br />and
+              comprehensive consulting solutions
             </h2>
           </div>
           <div class="row">
@@ -416,10 +416,10 @@
                   <a href="services-details.html">Who We Are</a>
                 </h3>
                 <p class="services-three__text">
-                  Massa augue angry inceptos ridiculus poten dictumst amet
-                  dignissim curabitur ultrices egestas augue auctor volutpat
-                  vitae conubia bibendum ligula ligula educate dictum autonum
-                  necute rutrum real integrity buying cool read engineer
+                  We are a company specializing in human resources consulting
+                  and business solutions. We work to improve organizational
+                  performance by providing integrated consulting and customized
+                  services that meet our clients' needs.
                 </p>
               </div>
             </div>
@@ -434,10 +434,10 @@
                   <a href="services-details.html">Company Vision</a>
                 </h3>
                 <p class="services-three__text">
-                  Massa augue angry inceptos ridiculus poten dictumst amet
-                  dignissim curabitur ultrices egestas augue auctor volutpat
-                  vitae conubia bibendum ligula ligula educate dictum autonum
-                  necute rutrum real integrity buying cool read engineer
+                  To be the leading strategic partner in the field of human
+                  resources consulting and business solutions, by providing
+                  innovative and effective services that contribute to our
+                  clients' success and enhance their market position.
                 </p>
               </div>
             </div>
@@ -452,10 +452,10 @@
                   <a href="services-details.html">Why Choose Us</a>
                 </h3>
                 <p class="services-three__text">
-                  Massa augue angry inceptos ridiculus poten dictumst amet
-                  dignissim curabitur ultrices egestas augue auctor volutpat
-                  vitae conubia bibendum ligula ligula educate dictum autonum
-                  necute rutrum real integrity buying cool read engineer
+                  We have a team with extensive experience in human resources
+                  consulting and business solutions, enabling us to provide
+                  customized services that effectively meet our clients' needs.
+                  We are committed to quality and innovation in everything.
                 </p>
               </div>
             </div>
@@ -534,14 +534,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      This service was truly amazing. It helped us improve our
+                      operations and greatly increase our efficiency. The staff
+                      was professional and helpful throughout.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Jennifer R. Sullivan</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -577,14 +576,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      This service was truly amazing. It helped us improve our
+                      operations and greatly increase our efficiency. The staff
+                      was professional and helpful throughout.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Asle Brown</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -620,14 +618,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      This service was truly amazing. It helped us improve our
+                      operations and greatly increase our efficiency. The staff
+                      was professional and helpful throughout.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Jimy Anderson</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -663,14 +660,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      This service was truly amazing. It helped us improve our
+                      operations and greatly increase our efficiency. The staff
+                      was professional and helpful throughout.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Jennifer R. Sullivan</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -706,14 +702,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      This service was truly amazing. It helped us improve our
+                      operations and greatly increase our efficiency. The staff
+                      was professional and helpful throughout.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Asle Brown</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -749,14 +744,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      This service was truly amazing. It helped us improve our
+                      operations and greatly increase our efficiency. The staff
+                      was professional and helpful throughout.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Jimy Anderson</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -792,14 +786,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      This service was truly amazing. It helped us improve our
+                      operations and greatly increase our efficiency. The staff
+                      was professional and helpful throughout.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Jennifer R. Sullivan</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -835,14 +828,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      This service was truly amazing. It helped us improve our
+                      operations and greatly increase our efficiency. The staff
+                      was professional and helpful throughout.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Asle Brown</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -878,14 +870,13 @@
                   </ul>
                   <div class="testimonial-one__text">
                     <p>
-                      Praesent bibendum praesent anterule conubia intege
-                      convallis egete site commodo proin fermentum nostra egesta
-                      lacinia adiso dictumst.
+                      This service was truly amazing. It helped us improve our
+                      operations and greatly increase our efficiency. The staff
+                      was professional and helpful throughout.
                     </p>
                   </div>
                   <div class="testimonial-one__author">
                     <h3>Jimy Anderson</h3>
-                    <p>Senior Executive</p>
                   </div>
                 </div>
               </div>
@@ -920,14 +911,14 @@
                     <p class="section-title__tagline">Focus Quality</p>
                   </div>
                   <h2 class="section-title__title">
-                    concept Design delivery <br />
-                    exceptional execution
+                    Innovative Design<br />Exceptional Execution
                   </h2>
                 </div>
                 <p class="progress-two__text">
-                  Erose luctus tellus velitens normal dapibus praesent tempor
-                  feugiat eleifend purus diam erat malesuada class duis orci
-                  class vulputate ultricies aliquet congue inceptos.
+                  We are committed to providing the highest levels of quality in
+                  all our services. With a dedicated team and extensive
+                  experience, we ensure exceptional results that meet and exceed
+                  our clients' expectations.
                 </p>
                 <ul class="progress-two__progress-list list-unstyled">
                   <li>
@@ -1094,9 +1085,9 @@
                       /></a>
                     </div>
                     <p class="footer-widget__about-text">
-                      Neque porttitor fermentum congue duis<br />
-                      natoque had amcorp torquent vulputate<br />
-                      donec tren conubian
+                      Index Consultation: Cairo’s dynamic consultancy<br />
+                      turning bold strategy and unforgettable customer<br />
+                      experiences into measurable growth.
                     </p>
                     <div class="footer-widget__emergency-call">
                       <p>Emergency</p>
