--- a/index-ar.html
+++ b/index-ar.html
@@ -876,8 +876,10 @@
                                 </div>
                                 <h2 class="section-title__title">تجربة تطور عملك.</h2>
                             </div>
-                            <p class="project-two__text">الأخضر هو في منتصف الثانية نفسها في منتصف الخير الذي أنشأته
-                                أقل. <br> بالنظر إلى الظلام ، فإن الأضواء تجعل كل جناح يواجه اللون الرئيسي</p>
+                            <p class="project-two__text">
+                                اكتشف كيف تدفع حلولنا المصممة خصيصًا النمو القابل للقياس و<br /> تحول
+                                عملك لتحقيق النجاح المستدام.
+                            </p>
                         </div>
                     </div>
                     <div class="project-two__bottom">
@@ -1240,9 +1242,9 @@
                       /></a>
                     </div>
                     <p class="footer-widget__about-text">
-                      Neque porttitor fermentum congue duis<br />
-                      natoque had amcorp torquent vulputate<br />
-                      donec tren conubian
+                      Index Consultation: شركة استشارية ديناميكية في القاهرة<br />
+                      تحوّل الاستراتيجيات الجريئة وتجارب العملاء التي لا تُنسى<br />
+                      إلى نمو يمكن قياسه.
                     </p>
                     <div class="footer-widget__emergency-call">
                       <p>اتصل الآن</p>
