--- a/index.html
+++ b/index.html
@@ -899,9 +899,8 @@
                   </h2>
                 </div>
                 <p class="project-two__text">
-                  Green is midst second itself midst good he she'd created
-                  lesser. <br />
-                  Given darkness lights place make every winged main colour face
+                    Discover how our tailored solutions drive measurable growth and<br /> transform
+                    your business for lasting success.
                 </p>
               </div>
             </div>
@@ -1323,9 +1322,7 @@
                       /></a>
                     </div>
                     <p class="footer-widget__about-text">
-                      Neque porttitor fermentum congue duis<br />
-                      natoque had amcorp torquent vulputate<br />
-                      donec tren conubian
+                      Index Consultation: Cairo’s dynamic consultancy<br /> turning bold strategy and unforgettable customer<br /> experiences into measurable growth.
                     </p>
                     <div class="footer-widget__emergency-call">
                       <p>Emergency</p>
