--- a/services-ar.html
+++ b/services-ar.html
@@ -34,8 +34,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <link
       rel="stylesheet"
@@ -504,14 +505,20 @@
                       /></a>
                     </div>
                     <p class="footer-widget__about-text">
-                      Neque porttitor fermentum congue duis<br />
-                      natoque had amcorp torquent vulputate<br />
-                      donec tren conubian
+                      Index Consultation: شركة استشارية ديناميكية في القاهرة<br />
+                      تحوّل الاستراتيجيات الجريئة وتجارب العملاء التي لا تُنسى<br />
+                      إلى نمو يمكن قياسه.
                     </p>
                     <div class="footer-widget__emergency-call">
                       <p>اتصل الآن</p>
-                      <p class="d-flex align-items-center gap-3"><i class="fas fa-phone"></i><a href="tel:+201013714343">+20 101 3714 343</a></p>
-                      <p class="d-flex align-items-center gap-3"><i class="fas fa-headphones"></i><a href="tel:0227510396">02 275 10 396</a></p>
+                      <p class="d-flex align-items-center gap-3">
+                        <i class="fas fa-phone"></i
+                        ><a href="tel:+201013714343">+20 101 3714 343</a>
+                      </p>
+                      <p class="d-flex align-items-center gap-3">
+                        <i class="fas fa-headphones"></i
+                        ><a href="tel:0227510396">02 275 10 396</a>
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -579,7 +586,8 @@
           <div class="container">
             <div class="site-footer__bottom-inner justify-content-center">
               <p class="site-footer__bottom-text">
-                حقوق النشر © 2025 <a href="#">Index Consultation.</a> جميع الحقوق محفوظة.
+                حقوق النشر © 2025 <a href="#">Index Consultation.</a> جميع
+                الحقوق محفوظة.
               </p>
             </div>
           </div>
