--- a/contact-ar.html
+++ b/contact-ar.html
@@ -255,11 +255,10 @@
                   </h2>
                 </div>
                 <p class="contact-page__text">
-                  Rutrum sociosqu ametour nisida nibhes felise magna
-                  dignissim<br />
-                  placerat senectus non litora feugiat lacus pulvinar natoque
-                  nostra<br />
-                  torquent own was hath in grass
+                  إذا كنت بحاجة إلى استشارة أو ترغب في طلب خدماتنا الاحترافية،
+                  فإن فريق Index Consultation جاهز لمساعدتك. تواصل معنا عبر
+                  الهاتف أو البريد الإلكتروني أو اترك رسالة وسنرد عليك في أقرب
+                  وقت.
                 </p>
               </div>
 
@@ -331,11 +330,6 @@
                   </div>
                   <h2 class="section-title__title">تواصل معنا</h2>
                 </div>
-                <p class="contact-two__text">
-                  Him days likeness waters the you will after a fifth to every
-                  after he itself<br />
-                  second can't cattle wherein they are casue
-                </p>
                 <div class="contact-two__form-box">
                   <form
                     action="assets/inc/sendemail.php"
@@ -345,11 +339,7 @@
                     <div class="row">
                       <div class="col-xl-6">
                         <div class="contact-two__input-box">
-                          <input
-                            type="text"
-                            placeholder="الاسم*"
-                            name="name"
-                          />
+                          <input type="text" placeholder="الاسم*" name="name" />
                         </div>
                       </div>
                       <div class="col-xl-6">
@@ -438,9 +428,9 @@
                       /></a>
                     </div>
                     <p class="footer-widget__about-text">
-                      Neque porttitor fermentum congue duis<br />
-                      natoque had amcorp torquent vulputate<br />
-                      donec tren conubian
+                      Index Consultation: شركة استشارية ديناميكية في القاهرة<br />
+                      تحوّل الاستراتيجيات الجريئة وتجارب العملاء التي لا تُنسى<br />
+                      إلى نمو يمكن قياسه.
                     </p>
                     <div class="footer-widget__emergency-call">
                       <p>اتصل الآن</p>
