--- a/contact.html
+++ b/contact.html
@@ -254,11 +254,7 @@
                   </h2>
                 </div>
                 <p class="contact-page__text">
-                  Rutrum sociosqu ametour nisida nibhes felise magna
-                  dignissim<br />
-                  placerat senectus non litora feugiat lacus pulvinar natoque
-                  nostra<br />
-                  torquent own was hath in grass
+                  If you need advice or would like to request our professional services, the Index Consultation team is ready to assist you. Contact us by phone, email, or leave a message, and we will respond as soon as possible.
                 </p>
               </div>
 
@@ -330,11 +326,6 @@
                   </div>
                   <h2 class="section-title__title">contact with us</h2>
                 </div>
-                <p class="contact-two__text">
-                  Him days likeness waters the you will after a fifth to every
-                  after he itself<br />
-                  second can't cattle wherein they are casue
-                </p>
                 <div class="contact-two__form-box">
                   <form
                     action="assets/inc/sendemail.php"
@@ -437,9 +428,7 @@
                       /></a>
                     </div>
                     <p class="footer-widget__about-text">
-                      Neque porttitor fermentum congue duis<br />
-                      natoque had amcorp torquent vulputate<br />
-                      donec tren conubian
+                      Index Consultation: Cairo’s dynamic consultancy<br /> turning bold strategy and unforgettable customer<br /> experiences into measurable growth.
                     </p>
                     <div class="footer-widget__emergency-call">
                       <p>Emergency</p>
