--- a/contact.html
+++ b/contact.html
@@ -254,7 +254,10 @@
                   </h2>
                 </div>
                 <p class="contact-page__text">
-                  If you need advice or would like to request our professional services, the Index Consultation team is ready to assist you. Contact us by phone, email, or leave a message, and we will respond as soon as possible.
+                  If you need advice or would like to request our professional
+                  services, the Index Consultation team is ready to assist you.
+                  Contact us by phone, email, or leave a message, and we will
+                  respond as soon as possible.
                 </p>
               </div>
 
@@ -428,7 +431,9 @@
                       /></a>
                     </div>
                     <p class="footer-widget__about-text">
-                      Index Consultation: Cairo’s dynamic consultancy<br /> turning bold strategy and unforgettable customer<br /> experiences into measurable growth.
+                      Index Consultation: Cairo’s dynamic consultancy<br />
+                      turning bold strategy and unforgettable customer<br />
+                      experiences into measurable growth.
                     </p>
                     <div class="footer-widget__emergency-call">
                       <p>Emergency</p>
@@ -544,7 +549,7 @@
           </li>
           <li>
             <i class="fa fa-phone-alt"></i>
-            <a href="tel:666-888-0000">666 888 0000</a>
+            <a href="tel:+201013714343">+20 101 3714 343</a>
           </li>
         </ul>
         <!-- /.mobile-nav__contact -->
