--- a/contact-ar.html
+++ b/contact-ar.html
@@ -429,7 +429,8 @@
                     </div>
                     <p class="footer-widget__about-text">
                       Index Consultation: شركة استشارية ديناميكية في القاهرة<br />
-                      تحوّل الاستراتيجيات الجريئة وتجارب العملاء التي لا تُنسى<br />
+                      تحوّل الاستراتيجيات الجريئة وتجارب العملاء التي لا
+                      تُنسى<br />
                       إلى نمو يمكن قياسه.
                     </p>
                     <div class="footer-widget__emergency-call">
@@ -546,7 +547,7 @@
           </li>
           <li>
             <i class="fa fa-phone-alt"></i>
-            <a href="tel:666-888-0000">666 888 0000</a>
+            <a href="tel:+201013714343">+20 101 3714 343</a>
           </li>
         </ul>
         <!-- /.mobile-nav__contact -->
